@@ -2,8 +2,12 @@ package org.reactome.lit_ball.common
 
 object Changes {
     val text = """
+v2331
+ - no need for outer parenthesis in logical expressions
+ - doc: logical expr
+ - fix: duplicate DOIs in acc./rej. files
+
 v2330
- - NOTE that queries of type 1 may not work as expected due to an issue at S2
  - in annotate: delete paper
  - Wikidata as PMID2DOI bkp server
  - doc: PMIDs
